# mohair-substrait

./: .gitmodules  CMakeLists.txt  MohairSubstraitConfig.cmake.in  buf.gen.yaml  meson.build  meson.options
scripts/: change-namespace.bash
src/cpp/: apidep_standard.hpp  apidep_substrait.hpp  meson.build  mohair-substrait-config.hpp  mohair-substrait-config.hpp.in  mohair_substrait.cpp  mohair_substrait.hpp
src/cpp/mohair/: algebra.pb.cc  algebra.pb.h  topology.pb.cc  topology.pb.h
src/cpp/mohair-substrait/mohair/: algebra.pb.cc  algebra.pb.h  topology.pb.cc  topology.pb.h
src/cpp/mohair-substrait/substrait/: algebra.pb.cc  algebra.pb.h  capabilities.pb.cc  capabilities.pb.h  extended_expression.pb.cc  extended_expression.pb.h  function.pb.cc  function.pb.h  parameterized_types.pb.cc  parameterized_types.pb.h  plan.pb.cc  plan.pb.h  type.pb.cc  type_expressions.pb.cc  type_expressions.pb.h
src/cpp/mohair-substrait/substrait/extensions/: extensions.pb.cc  extensions.pb.h
src/cpp/skytether/mohair/: algebra.pb.cc  algebra.pb.h  topology.pb.cc  topology.pb.h
src/cpp/skytether/substrait/: algebra.pb.cc  algebra.pb.h  capabilities.pb.cc  capabilities.pb.h  extended_expression.pb.cc  extended_expression.pb.h  function.pb.cc  function.pb.h  parameterized_types.pb.cc  parameterized_types.pb.h  plan.pb.cc  plan.pb.h  type.pb.cc  type.pb.h  type_expressions.pb.cc  type_expressions.pb.h
src/cpp/skytether/substrait/extensions/: extensions.pb.cc  extensions.pb.h
src/cpp/substrait/: algebra.pb.cc  algebra.pb.h  capabilities.pb.cc  capabilities.pb.h  extended_expression.pb.cc  extended_expression.pb.h  function.pb.cc  function.pb.h  parameterized_types.pb.cc  parameterized_types.pb.h  plan.pb.cc  plan.pb.h  type.pb.cc  type.pb.h  type_expressions.pb.cc  type_expressions.pb.h
src/cpp/substrait/extensions/: extensions.pb.cc  extensions.pb.h
src/cpp/toolbox/: read-substrait.cpp
